--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
-<body>
+<body class="black">
     <h1>
         Typescript
     </h1>
